Errors.txt
2021-10-03:Users/josiahmoltz/APCS/09_bigsib/Greet.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Greet.java:8: error: illegal '.'
		../08_hellofxn/Greet.greet("Jacob");
		 ^
Greet.java:8: error: illegal underscore
		../08_hellofxn/Greet.greet("Jacob");
		     ^
Greet.java:8: error: not a statement
		../08_hellofxn/Greet.greet("Jacob");
		              ^
3 errors
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
Tried testing out referencing classes from other directories by giving path to file
-----------------------------------------------------------------------------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


2021-10-03:Users/josiahmoltz/APCS/09_bigsib/Greet.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Greet.java:19: error: cannot access Queso
		Queso.greet();
		^
  bad class file: ./Queso.class
    class file contains wrong class: Greet
    Please remove or make sure it appears in the correct subdirectory of the classpath.
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
Renamed 07_helloclass/Greet.class to 09_bigsib/Queso.class and forgot
the file name must match the class name
-----------------------------------------------------------------------------------


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2021-10-03:Users/josiahmoltz/APCS/09_bigsib/Greet.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Greet.java:19: error: cannot find symbol
		Queso.greet();
		     ^
  symbol:   method greet()
  location: class Queso
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
No method named greet in class Queso
-----------------------------------------------------------------------------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


2021-10-03:Users/josiahmoltz/APCS/09_bigsib/Greet.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Greet.java:19: error: method main in class Queso cannot be applied to given types;
		Queso.main();
		     ^
  required: String[]
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
No arguments given for main, even when arguments specified
-----------------------------------------------------------------------------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


2021-10-03:Users/josiahmoltz/APCS/09_bigsib/Greet.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Greet.java:19: error: illegal start of expression
		Queso.main({""});
		           ^
Greet.java:19: error: not a statement
		Queso.main({""});
		            ^
Greet.java:19: error: ';' expected
		Queso.main({""});
		              ^
Greet.java:19: error: illegal start of expression
		Queso.main({""});
		               ^
4 errors
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
Not totally sure, but {""} isn't recognized as a String[] because it wasn't defined as one
-----------------------------------------------------------------------------------


2021-10-03:Users/josiahmoltz/APCS/10_bigsib/BigSib.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
Error: Main method not found in class BigSib, please define the main method as:
   public static void main(String[] args)
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
Run time error caused by lack of main() when running java BigSib.
-----------------------------------------------------------------------------------
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


2021-10-03:Users/josiahmoltz/APCS/10_bigsib/BigSib.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
josiahmoltz@Josiahs-MacBook-Pro 10_bigsib % javac BigSib.java
BigSib.java:10: error: incompatible types: unexpected return value
    return "Your Big Sib gives you a warm welcome, " + name;
                                                     ^
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
void type specified in function, but the function returned a String
-----------------------------------------------------------------------------------


2021-10-03:Users/josiahmoltz/APCS/10_bigsib/BigSib.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
josiahmoltz@Josiahs-MacBook-Pro 10_bigsib % javac Greet.java
Greet.java:8: error: 'void' type not allowed here
    System.out.println(BigSib.greet("Crosby"));
                                   ^
Greet.java:9: error: 'void' type not allowed here
    System.out.println(BigSib.greet("Stills"));
                                   ^
Greet.java:10: error: 'void' type not allowed here
    System.out.println(BigSib.greet("Nash"));
                                   ^
3 errors
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
Attempted to print a void
-----------------------------------------------------------------------------------


2021-10-03:Users/josiahmoltz/APCS/12_bigsib/BigSib.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
josiahmoltz@Josiahs-MacBook-Pro 12_bigsib % javac Greet.java
./BigSib.java:4: error: non-static variable helloMsg cannot be referenced from a static context
    helloMsg=msg;
    ^
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
???
-----------------------------------------------------------------------------------


2021-10-03:Users/josiahmoltz/APCS/12_bigsib/BigSib.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
josiahmoltz@Josiahs-MacBook-Pro 12_bigsib % javac BigSib.java
BigSib.java:1: error: modifier static not allowed here
public static class BigSib  {
              ^
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
static can't be applied to a class
-----------------------------------------------------------------------------------


2021-10-25:Users/josiahmoltz/APCS/24_while/Driver.java
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Errors
----------------------------------------
josiahmoltz@Josiahs-MacBook-Pro 24_while % javac Driver.java
Driver.java:34: error: as of release 8, 'this' is allowed as the parameter name for the receiver type only
  Driver pinTig = new this();
                      ^
  which has to be the first parameter, and cannot be a lambda parameter
1 error
----------------------------------------

Explanation
-----------------------------------------------------------------------------------
?????????????????????????????????????????????????
-----------------------------------------------------------------------------------
